Aplicacion funcionando en servidor kimsufi

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -102,7 +102,7 @@
 				</div>
 				<div class="agrupacionElementos">
 					<p class="letraDocumento" >DNI:</p>
-					<input type="text" name="dni" id="reDNI" value="" placeholder="DNI" class="required" minlength="3" />
+					<input type="text" name="dni" id="reDNI" value="" placeholder="DNI" class="required dni_validator" minlength="3" />
 					<br>
 				</div>
 				<div class="agrupacionElementos">
